--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "connect": "^3.6.3",
     "express": "^4.15.4",
     "socket.io": "^2.0.3"
+  },
+  "engines" : {
+    "node" : "6.10.1"
   }
 }
