--- a/DBL_Nordic_CHI/package.json
+++ b/DBL_Nordic_CHI/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "fullscreen": "^1.1.1",
     "html-pdf": "^2.2.0",
     "node-cmd": "^3.0.0",
+    "screenfull": "^3.3.3",
     "socket.io": "^2.1.1"
   }
 }
