--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "DBL_Nordic_CHI",
+  "name": "DBL_Browser",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+   "repository": {
+    "type": "git",
+    "url": "git+https://github.com/torekndsn/DBL.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/torekndsn/DBL/issues"
+  },
+  "homepage": "https://github.com/torekndsn/DBL#readme",
   "dependencies": {
     "express": "^4.16.3",
     "fullscreen": "^1.1.1",
@@ -15,5 +23,8 @@
     "node-cmd": "^3.0.0",
     "screenfull": "^3.3.3",
     "socket.io": "^2.1.1"
+  },
+    "engines": {
+    "node": ">=6.10.1"
   }
 }
